# SaturnineQuail-pedagogy

./: .gitignore  README.md  intro.md  myst.yml  pyproject.toml  scratch.ipynb
Chapter01/: Lesson1_Python101.ipynb  intro.md
Chapter02/: Lecture.md  Lesson2_DataExploration.ipynb  intro.md
Chapter03/: Exercises.ipynb  Lecture.md  Lesson3_Statistics.ipynb
Chapter04/: Lesson.md  Lesson4.1_NHRT.ipynb  Lesson4.2_NHRT.ipynb
Chapter05/: Exercises.ipynb  Lesson.md  Lesson5.1_LinearRegression.ipynb  Lesson5.2_MultipleLinearRegression.ipynb
Chapter06/: Exercises.ipynb  Lesson.md  Lesson5.1_LinearRegression.ipynb  Lesson5.2_MultipleLinearRegression.ipynb  Lesson6_LogisticRegression.ipynb
Chapter07/: Exercises.ipynb  Lesson7.1_Classification.ipynb  Lesson7.2_TitanicDataset.ipynb  intro.md
Chapter08/: Exercises.ipynb
Chapter09/: Exercises.ipynb  Lesson9.1_ANN_MNIST.ipynb  Lesson9.2_ANN_iris.ipynb  Lesson9.3_CNN_MNIST.ipynb
Chapter10/: Lesson10.1_VAE.ipynb  Lesson10.2_Superresolution.ipynb
Final/: final.ipynb
Midterm/: midterm.ipynb
