[project]
name = "saturninequail-pedagogy"
version = "0.1.0"
description = "The pedagogical component of Willow Fox Fortino's PhD Dissertation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter-book>=2.1.2",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
]
